--- a/DAL/App.Config
+++ b/DAL/App.Config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="msse680Entities" connectionString="metadata=res://*/Model680.csdl|res://*/Model680.ssdl|res://*/Model680.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=scott;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="scottEntities" connectionString="metadata=res://*/Model680.csdl|res://*/Model680.ssdl|res://*/Model680.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=scott;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
