--- a/Service/Service.csproj
+++ b/Service/Service.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="RepositoryFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ValidateCreditCard.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DAL\DAL.csproj">
