--- a/BusinessTest/BusinessTest.csproj
+++ b/BusinessTest/BusinessTest.csproj
@@ -62,6 +62,10 @@
       <Project>{3076b2f5-4318-4cf7-bfb0-37cea9412611}</Project>
       <Name>DAL</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Service\Service.csproj">
+      <Project>{652606f0-fe55-4904-8474-23c86e271cc8}</Project>
+      <Name>Service</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
