--- a/Business/Business.csproj
+++ b/Business/Business.csproj
@@ -40,8 +40,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ContactManager.cs" />
+    <Compile Include="CreateContact.cs" />
     <Compile Include="PhoneManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ValidateCreditCard.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DAL\DAL.csproj">
